gcc/testsuite/rust/rustc/ui/macros/issue-83344.rs
//@ check-fail

fn main() {
    println!("{}\
// { dg-error "" "" { target *-*-* } .-1 }
}

